# niobium-fhetch

./: .clang-tidy  .clangd  .gitignore  .gitmodules  .scanoss-curations.json  CMakeLists.txt  Makefile  NOTICE  PYTHON.md  README.md
.github/workflows/: ci.yml  dispatch-to-client-on-pr.yml  dispatch-to-compiler-on-merge.yml  reusable-submodule-update.yml  runtime-release.yml  scanoss.yml  update-openfhe-submodule.yml
bindings/python/: CMakeLists.txt  README.md
bindings/python/tests/: _nbcommon.py  session_api_smoke.py
bindings/python/tests/bootstrap/: client.py  server.py
bindings/python/tests/plaintext_add/: client.py  server.py
bindings/python/tests/simple_ops/: client.py  decrypt.py
cmake/: NiobiumFhetchConfig.cmake.in
examples/: CMakeLists.txt
examples/fhetch/: simple_fhetch.cpp
include/niobium/: checks.h  compiler.h  fhetch_api.h  fhetch_parser.h
include/niobium/fhetch_sim/: poly_source.h  simulator.h
include/niobium/openfhe/: probes.h
make/: python.mk  runtime.mk
make/runtime/: NiobiumFhetchConfig.cmake  manifest.json.in
python/: CMakeLists.txt  niobium_session.cpp
python/tests/: session_api_smoke.py
python/tests/bootstrap/: decrypt.py  server.py
python/tests/plaintext_add/: decrypt.py  server.py
python/tests/simple_ops/: server.py
src/: auto_facade.cpp  cereal_io.h  compiler.cpp  compiler_internal.h  fhetch_api.cpp  fhetch_parser.cpp  local_replay.cpp  local_replay.h  probes.cpp  replay_poly_source.cpp  replay_poly_source.h  trace_writer.cpp  trace_writer.h
src/fhetch_sim/: instruction.cpp  instruction.h  main.cpp  memory.h  residency.cpp  residency.h  rss.h  simulator.cpp  spill_file.cpp  spill_file.h  use_index.cpp  use_index.h
tests/: CMakeLists.txt
tests/automorph_alias_test/: test.cpp
tests/bootstrap/: client.cpp  decrypt.cpp  server.cpp
tests/fhetch_driver/: CMakeLists.txt  main.cpp
tests/memory_model/: test.cpp
tests/plaintext_add/: client.cpp  decrypt.cpp  server.cpp
tests/runtime/: CMakeLists.txt
tests/simple_ops/: client.cpp  decrypt.cpp  server.cpp
tests/simulator_liveness/: test.cpp
